--- a/assets/custom.css
+++ b/assets/custom.css
@@ -100,7 +100,7 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   color:rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.template-index .footer-bottom [section-name = 'localization'] select{
+.footer-bottom [section-name = 'localization'] select{
   --tw-text-opacity:1;
   color:rgb(255 255 255 / var(--tw-text-opacity));
 }
