--- a/sections/logo-slider.liquid
+++ b/sections/logo-slider.liquid
@@ -11,7 +11,7 @@ style="{% if secSt.bg_color != blank %}background-color: {{ secSt.bg_color}};{% 
         <div id="carousel-main-{{section.id}}" 
           data-flickity='{"pageDots": false, "fade": true,"prevNextButtons": false, "wrapAround": true{% if isStyle %}, "autoPlay": true{% endif %} }'>
           {% for block in section.blocks %}
-          <div class="mb-20 text-center" style="color:{{blkSt.text_color}};" >
+          <div class="mb-20 text-center" style="color:{{secSt.text_color}};" >
 
             {% if isStyle %}
             <div class="flex items-center mb-6 justify-center">
