--- a/sections/products-slider-full.liquid
+++ b/sections/products-slider-full.liquid
@@ -15,7 +15,7 @@
         {% if product.title.size > 0 %}
         <div tag-name="product-info" class="md:absolute relative md:mb-0 mb-8 left-4 top-4 opacity-0 transition-opacity duration-300 delay-700 w-full z-20">
           <div class="">
-            <h2 class="text-3_5xl mb-1">{{ product.title }}</h2>
+            <h2 class="lg:text-3_5xl md:text-3xl text-2xl mb-1">{{ product.title }}</h2>
             <p class="md:text-1_5xl text-lg md:mb-12 mb-2 text-black-600">Aviation grade magnesium alloy</p>
             <div class="flex items-center">
               <a href="{{ product.url }}" class="btn text-base py-1 md:px-5 px-3"> {{ section.settings.btn_Text }} </a>
