--- a/snippets/product-column-img.liquid
+++ b/snippets/product-column-img.liquid
@@ -1,6 +1,6 @@
 {%- capture productTabs -%}
-<div section-name="product-column-img" class="mt-8 rounded-md overflow-hidden border-solid border border-black-200">
-  <div class="py-6 px-12">
+<div section-name="product-column-img" class="mt-8 rounded-md overflow-hidden border-solid border border-black-300">
+  <div class="md:py-6 md:px-12 py-4 px-4">
     <ul class="flex text-sm justify-between">
     {% assign pClass = 'text-center' %}
       <li class="{{pClass}}"> 
