--- a/assets/custom.css
+++ b/assets/custom.css
@@ -677,6 +677,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   height:50%;
 }
 
+.h-14 {
+  height:3.5rem;
+}
+
 .h-6 {
   height:1.5rem;
 }
@@ -695,6 +699,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
 .h-px {
   height:1px;
+}
+
+.max-h-36 {
+  max-height:9rem;
 }
 
 .max-h-9 {
@@ -930,6 +938,16 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 .bg-white {
   --tw-bg-opacity:1;
   background-color:rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-black-300 {
+  --tw-bg-opacity:1;
+  background-color:rgb(204 204 204 / var(--tw-bg-opacity));
+}
+
+.bg-black-200 {
+  --tw-bg-opacity:1;
+  background-color:rgb(238 238 238 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-b {
@@ -1666,8 +1684,8 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
     padding-bottom:2.25rem;
   }
 
-  .md\:pl-10 {
-    padding-left:2.5rem;
+  .md\:pl-4 {
+    padding-left:1rem;
   }
 
   .md\:pl-6 {
@@ -1682,8 +1700,8 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
     padding-right:0px;
   }
 
-  .md\:pr-10 {
-    padding-right:2.5rem;
+  .md\:pr-4 {
+    padding-right:1rem;
   }
 
   .md\:pt-12 {
@@ -1696,14 +1714,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
   .md\:pt-6 {
     padding-top:1.5rem;
-  }
-
-  .md\:pl-4 {
-    padding-left:1rem;
-  }
-
-  .md\:pr-4 {
-    padding-right:1rem;
   }
 
   .md\:text-left {
@@ -1772,6 +1782,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
     height:33vw;
   }
 
+  .lg\:w-1\/4 {
+    width:25%;
+  }
+
   .lg\:w-1\/5 {
     width:20%;
   }
@@ -1796,6 +1810,14 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
     padding-left:4rem;
   }
 
+  .lg\:pl-6 {
+    padding-left:1.5rem;
+  }
+
+  .lg\:pr-6 {
+    padding-right:1.5rem;
+  }
+
   .lg\:pt-14 {
     padding-top:3.5rem;
   }
@@ -1806,14 +1828,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
   .lg\:pt-9 {
     padding-top:2.25rem;
-  }
-
-  .lg\:pl-6 {
-    padding-left:1.5rem;
-  }
-
-  .lg\:pr-6 {
-    padding-right:1.5rem;
   }
 
   .lg\:text-3_5xl {
@@ -1828,6 +1842,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 }
 
 @media (min-width: 1280px) {
+  .xl\:w-1\/6 {
+    width:16.666667%;
+  }
+
   .xl\:pb-18 {
     padding-bottom:4.5rem;
   }
@@ -1836,19 +1854,19 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
     padding-bottom:6rem;
   }
 
-  .xl\:pt-18 {
-    padding-top:4.5rem;
-  }
-
-  .xl\:pt-24 {
-    padding-top:6rem;
-  }
-
   .xl\:pl-10 {
     padding-left:2.5rem;
   }
 
   .xl\:pr-10 {
     padding-right:2.5rem;
+  }
+
+  .xl\:pt-18 {
+    padding-top:4.5rem;
+  }
+
+  .xl\:pt-24 {
+    padding-top:6rem;
   }
 }
