--- a/sections/accordion.liquid
+++ b/sections/accordion.liquid
@@ -15,9 +15,11 @@
                   <svg t="1685002046935" class="{%- unless forFirsrt -%}hidden{% endunless %} block md:w-8 md:h-8 h-6 w-6 md:-translate-y-8 -translate-y-6 transition-all" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2096" width="32" height="32"><path d="M512 34.133333C247.808 34.133333 34.133333 247.808 34.133333 512s213.674667 477.866667 477.866667 477.866667 477.866667-213.674667 477.866667-477.866667S776.192 34.133333 512 34.133333z m266.24 456.021334c0 24.576-19.797333 44.373333-44.373333 44.373333H245.76v-1.365333c0-24.576 19.797333-44.373333 44.373333-44.373334H778.24v1.365334z" fill="#2c2c2c" p-id="2097"></path></svg>
                 </div>
             </div>
+
+
+            <div tag-name='accordion-content' class="{%- unless forFirsrt -%}hidden{% endunless %} md:text-lg text-base md:mt-8 mt-6">
             {%- case block.type -%}
               {%- when "objList" -%}
-              <div tag-name='accordion-content' class="{%- unless forFirsrt -%}hidden{% endunless %} md:text-lg text-base md:mt-8 mt-6">
                   <div class="flex flex-wrap">
                   {% assign objArr = blkSt.content | split: '<br>'  %}
                     {% for obj in objArr %}
@@ -30,17 +32,61 @@
                       </div>
                     {% endfor %}
                   </div>
-              </div>
 
               {%- when "image" -%}
-                <div tag-name='accordion-content' class="{%- unless forFirsrt -%}hidden{% endunless %} md:text-lg text-base md:mt-8 mt-6">
                   <div>
                     {{ blkSt.url_pc | image_url: width:1300 | image_tag: width:nil, class:"w-full md:block hidden", loading: 'lazy'}}
                     {{ blkSt.url_mb | image_url: width:765 | image_tag: width:nil, class:"w-full md:hidden block", loading: 'lazy'}}
                   </div>
-                </div>
-            {%- endcase -%}
 
+              {%- when "imageGrid" -%}
+              {% assign divClass1 = "flex flex-wrap font-semibold" %}
+              {% assign divClass2 = "xl:w-1/6 lg:w-1/4 md:w-1/3 w-1/2" %}
+              {% assign divClass3 = "mx-4 rounded overflow-hidden shadow pb-4" %}
+              {% assign pClass = "text-base h-14 flex items-center leading-tight p-2 mb-2" %}
+                  {%- if product.metafields.custom[blkSt.metafield1] != blank -%}
+                  <div class="{{ divClass1 }}">
+                    <div class="{{ divClass2 }} text-lg">{{blkSt.text1}}</div>
+                    {% for image in product.metafields.custom.test.value %}
+                      <div class="{{ divClass2 }}">
+                        <div class="{{ divClass3 }}">
+                          <p class="{{ pClass }}"> {{image.alt}}</p>
+                          {{ image | image_url: width:500 | image_tag: width:nil, class:"w-full block max-h-36", loading: 'lazy'}}
+                        </div>
+                      </div>
+                    {% endfor %}
+                  </div>
+                  {%- endif -%}
+                  {%- if product.metafields.custom[blkSt.metafield2] != blank -%}
+                  <div class="{{ divClass1 }}">
+                    <div class="{{ divClass2 }} text-lg">{{blkSt.text2}}</div>
+                    {% for image in product.metafields.custom.test.value %}
+                      <div class="{{ divClass2 }}">
+                        <div class="{{ divClass3 }}">
+                          <p class="{{ pClass }}"> {{image.alt}}</p>
+                          {{ image | image_url: width:500 | image_tag: width:nil, class:"w-full block max-h-36", loading: 'lazy'}}
+                        </div>
+                      </div>
+                    {% endfor %}
+                  </div>
+                  {%- endif -%}
+                  {%- if product.metafields.custom[blkSt.metafield3] != blank -%}
+                  <div class="{{ divClass1 }}">
+                    <div class="{{ divClass2 }} text-lg">{{blkSt.text4}}</div>
+                    {% for image in product.metafields.custom.test.value %}
+                      <div class="{{ divClass2 }}">
+                        <div class="{{ divClass3 }}">
+                          <p class="{{ pClass }}"> {{image.alt}}</p>
+                          {{ image | image_url: width:500 | image_tag: width:nil, class:"mx-auto block max-h-36", loading: 'lazy'}}
+                        </div>
+                      </div>
+                    {% endfor %}
+                  </div>
+                  {%- endif -%}
+
+
+            {%- endcase -%}
+            </div>
 
 
           </li>
@@ -176,6 +222,52 @@
             "type": "image_picker",
             "id": "url_mb",
             "label":"Image on mobile"
+          }
+        ]
+      },
+      {
+        "name": "Image grid",
+        "type": "imageGrid",
+        "settings": [
+          {
+            "type": "text",
+            "id": "title",
+            "label": "Drop down header",
+            "default":"Electronics"
+          },
+          {
+            "type": "header",
+            "content": "============"
+          },
+          {
+            "type": "text",
+            "id": "text1",
+            "label":"List-1 title"
+          },
+          {
+            "type": "text",
+            "id": "metafield1",
+            "label":"List-1 Metafield handle"
+          },
+          {
+            "type": "text",
+            "id": "text2",
+            "label":"List-2 title"
+          },
+          {
+            "type": "text",
+            "id": "metafield2",
+            "label":"List-2 Metafield handle"
+          },
+          {
+            "type": "text",
+            "id": "text3",
+            "label":"List-3 title"
+          },
+          {
+            "type": "text",
+            "id": "metafield3",
+            "label":"List-3 Metafield handle"
           }
         ]
       }
