--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1129,6 +1129,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
   padding-top:2rem;
 }
 
+.pt-5 {
+  padding-top:1.25rem;
+}
+
 .text-left {
   text-align:left;
 }
@@ -1714,6 +1718,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo'] {
 
   .md\:pt-6 {
     padding-top:1.5rem;
+  }
+
+  .md\:pt-0 {
+    padding-top:0px;
   }
 
   .md\:text-left {
