--- a/sections/data-statistics.liquid
+++ b/sections/data-statistics.liquid
@@ -5,7 +5,7 @@
   <div class="page-width px-4">
     <div class="md:rounded-section rounded-3xl flex md:flex-row flex-col justify-between overflow-hidden" style="background-color: {{ secSt.bg_color }};">
       <div class="md:p-12 md:pb-0 px-3 md:w-[62%]">
-        <h1 class="md:text-[2.625rem] text-3xl md:pb-9 pb-5 border-0 border-b-2 border-solid border-black-300 mb-0 relative
+        <h1 class="md:text-[2.625rem] text-3xl md:pt-0 pt-5 md:pb-9 pb-5 border-0 border-b-2 border-solid border-black-300 mb-0 relative
         after:content-[''] after:h-[2px] after:w-1/4 after:bg-black-900 after:block after:absolute after:-bottom-[2px]">{{ secSt.title }}</h1>
         <div class="md:mt-10 mt-6 flex flex-wrap">
           {% for block in section.blocks %}
