--- a/sections/color-slider-full.liquid
+++ b/sections/color-slider-full.liquid
@@ -32,7 +32,7 @@
     </div> 
 
     <div id="carousel-main-{{section.id}}" class="md:-mt-2 mt-8" 
-      data-flickity='{"draggable": false,"pageDots": false, "fade": true, "prevNextButtons": false}'> 
+      data-flickity='{"draggable": false,"pageDots": false, "fade": true, "prevNextButtons": false, "lazyLoad": true}'> 
       {% for block in section.blocks %}
         <div class='!transition-all'>{{ block.settings.image | image_url: width: 1000 | image_tag: width: nil }}</div>
       {% endfor %}
